Exc5/admin-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-admin-ingress
spec:
 podSelector:
 matchLabels:
 app: admin-front-end
 policyTypes:
 - Ingress
 ingress:
 - from:
   - podSelector:
     matchLabels:
       app: admin-back-end
   - podSelector:
     matchLabels:
       app: admin-front-end
 ports:
 - protocol: TCP
 port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-admin-egress
spec:
 podSelector:
 matchLabels:
 app: admin-back-end
 policyTypes:
 - Egress
 egress:
 - to:
   - podSelector:
     matchLabels:
       app: admin-front-end
 ports:
 - protocol: TCP
 port: 80
